--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <section id="proyectos">
     <h2>Proyectos</h2>
     <ul>
-      <li>Nombre del Proyecto 1</li>
+      <li>mi portafolio: https://github.com/diegouru91/portafolio</li>
       <li>Nombre del Proyecto 2</li>
       <li>Nombre del Proyecto 3</li>
       <!-- Puedes agregar más proyectos aquí -->
