--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <section id="inicio">
     <img src="https://cdn.pixabay.com/photo/2018/06/27/17/48/fantasy-3502188_960_720.jpg" alt="Imagen de cabecera">
     <h1>Diego Martin Caballero Manzanares</h1>
-    <p>Programador web apasionado iniciando mi carrera. Habilidades en HTML, CSS, JavaScript. foco y eficacia.</p>
+    <p>“¡Hola! Soy un apasionado programador web que está dando sus primeros pasos en esta emocionante carrera. Mi enfoque está en crear experiencias digitales atractivas y funcionales. Con habilidades en HTML, CSS y JavaScript, me esfuerzo por escribir código limpio y eficiente. Siempre estoy aprendiendo y en busqueda de nuevos desafíos. ¡Encantado de conocerte!”</p>
     <ul>
         <!-- Enlaces a redes sociales -->
         <li><a href="https://www.facebook.com/diegomartin.caballero/" target="_blank">Facebook</a></li>
